# chatcpp

./: .gitignore  Dockerfile  README.md  main.cpp
ChatGPT/: CMakeLists.txt
ChatGPT/data/: stories.txt
ChatGPT/include/: ChatGPT.h  Game.h
ChatGPT/src/: ChatGPT.cpp  Game.cpp
